--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,22 @@ License: MIT + file LICENSE
 Imports: 
     config,
     golem,
-    shiny
+    shiny,
+    processx,
+    attempt,
+    DT,
+    glue,
+    htmltools,
+    shinyMobile,
+    shinyjs,
+    shinyalert,
+    shinyWidgets,
+    waiter,
+    RPostgreSQL,
+    data.table
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
+Suggests: 
+    testthat
+    
