Fix Jadwal dari data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,10 @@ importFrom(htmltools,HTML)
 importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
-importFrom(jsonlite,fromJSON)
-importFrom(safer,decrypt_string)
 importFrom(shiny,column)
 importFrom(shiny,shinyApp)
+importFrom(shiny,tagList)
+importFrom(shinyMobile,f7Button)
+importFrom(shinyMobile,f7TimelineItem)
 importFrom(shinyjs,hide)
 importFrom(shinyjs,useShinyjs)
-importFrom(stats,rnorm)
